@@ -415,7 +415,14 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pEvent
              */
             this.dispatch                   = function(pEvent, pElement){
-                return (pElement || window).dispatchEvent(pEvent);
+                var lRet, lEvent;
+                
+                if (Util.isString(pEvent))
+                    lEvent = Events.create(pEvent);
+                else
+                    lEvent = pEvent;
+                
+                return (pElement || window).dispatchEvent(lEvent);
             };
             
             /**
