@@ -29,10 +29,9 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         Events.addKey( lListener );
         
         DOM.setButtonKey('f9', function(){
-            var lCurrent    = DOM.getCurrentFile(),
-                lEvent      = Events.create('contextmenu'); 
-                
-                Events.dispatch(lEvent, lCurrent);
+            var lCurrent    = DOM.getCurrentFile();
+            
+            Events.dispatch('contextmenu', lCurrent);
         });
         
         delete Menu.init;
